--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,12 @@
         <header class="inner">
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
+          <style>
+            h1{
+              font-size: 200%;
+            }
+          </style>
+            
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
