--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,10 @@
     <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
 
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <img src="images/pint_icon.png">
-    <title>{{ site.title | default: site.github.repository_name }}</title>
+    <title>
+      <img src="images/pint_icon.png" style="width:128px;height:128px;">
+    {{ site.title | default: site.github.repository_name }}
+    </title>
   </head>
 
   <body>
