--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,11 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
-    <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
+    <meta name="description" content=":{{ site.title | default: site.github.repository_name }}">
 
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <title>
-      <img src="images/pint_icon.png" style="width:128px;height:128px;">
-    {{ site.title | default: site.github.repository_name }}
-    </title>
+    <title>{{ site.title | default: site.github.repository_name }}</title>
+    <img src="images/pint_icon.png" style="width:128px;height:128px;">
   </head>
 
   <body>
