--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,6 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <title>{{ site.title | default: site.github.repository_name }}</title>
-    <img src="images/pint_icon.png" style="width:128px;height:128px;">
   </head>
 
   <body>
@@ -25,7 +24,10 @@
             }
           </style>
             
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
+          <h1 id="project_title">
+            <img src="images/pint_icon.png" style="width:128px;height:128px;">
+            {{ site.title | default: site.github.repository_name }}
+          </h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
           {% if site.show_downloads %}
