--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,42 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <title>{{ site.title | default: site.github.repository_name }}</title>
-  </head>
+<style>
+	div.container {
+    width: 100%;
+    border: 1px solid gray;
+}
+	header, footer {
+    padding: 1em;
+    color: white;
+    background-color: black;
+    clear: left;
+    text-align: center;
+}
+nav {
+    float: left;
+    max-width: 160px;
+    margin: 0;
+    padding: 1em;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+   
+nav ul a {
+    text-decoration: none;
+}
+
+article {
+    margin-left: 170px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
+}
+</style>
+</head>
   
 <body>
 
@@ -24,8 +59,7 @@
           </style>
             
           <h1 id="project_title">
-            <img src="images/pint_icon.png" style="width:128px;height:128px;">
-            {{ site.title | default: site.github.repository_name }}
+            <img src="images/pint_icon.png">
           </h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
