--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 	div.container {
     width: 100%;
     border: 1px solid gray;
+	font-family: "Arial", Arial, serif;
 }
 	header, footer {
     padding: 1em;
@@ -51,8 +52,8 @@ article {
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
           <style>
-            h1{
-              font-size: 500%;
+            h2{
+              font-size: 100%;
             }
           </style>
             
