--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	div.container {
     width: 100%;
     border: 1px solid gray;
-	font-family: "Arial", Arial, serif;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 	header, footer {
     padding: 1em;
