--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	div.container {
     width: 100%;
     border: 1px solid gray;
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
 }
 	header, footer {
     padding: 1em;
@@ -26,6 +26,29 @@ nav {
     padding: 1em;
 }
 
+	
+a {
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px dotted #666;
+  color: inherit;
+  text-shadow: none;
+}
+	a:hover, a:focus {border-bottom: 1px solid #0090ff;}
+	
+	#forkme_banner {
+  display: block;
+  position: absolute;
+  top:0;
+  right: 10px;
+  z-index: 10;
+  padding: 10px 20px 10px 50px;
+  color: #fff;
+  background: url('../images/blacktocat.svg') #0090ff no-repeat 8% 50%;
+  background-size: 25px;
+  font-weight: 700;
+  border: none;
+}
 nav ul {
     list-style-type: none;
     padding: 0;
