--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,19 +36,6 @@ a {
 }
 	a:hover, a:focus {border-bottom: 1px solid #0090ff;}
 	
-	#forkme_banner {
-  display: block;
-  position: absolute;
-  top:0;
-  right: 10px;
-  z-index: 10;
-  padding: 10px 20px 10px 50px;
-  color: #fff;
-  background: url('../images/blacktocat.svg') #0090ff no-repeat 8% 50%;
-  background-size: 25px;
-  font-weight: 700;
-  border: none;
-}
 nav ul {
     list-style-type: none;
     padding: 0;
@@ -58,6 +45,47 @@ article {
     border-left: 1px solid gray;
     padding: 1em;
     overflow: hidden;
+}
+	
+h1 {
+  margin-bottom: 20px;
+  font-size: 36px;
+  line-height: 1.1;
+  font-weight: 700;
+}
+
+h1#project_title {
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 32px;
+  line-height: 1.2;
+}
+
+h3 {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  font-size: 24px;
+  line-height: 1.3;
+}
+
+h4 {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  font-size: 21px;
+}
+
+h5 {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  font-size: 18px;
+}
+
+h6 {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  font-size: 16px;
 }
 </style>
 </head>
@@ -71,7 +99,7 @@ article {
 
           <style>
             h2{
-              font-size: 400%;
+              font-size: 150%;
             }
           </style>
             
