--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
   </head>
 
   <body>
-
+   width:1000px;
+   margin:0 auto;
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
@@ -40,9 +41,10 @@
         <nav>
   <ul>
 	<h1>Download PINT</h1>
-    <li><a href="#">Windows</a></li>
-    <li><a href="#">Mac</a></li>
-    <li><a href="#">Linux</a></li>
+    <li><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_windows_x86_64.zip">Windows</a></li>
+    <li><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_mac_x86_64.dmg">Mac</a></li>
+    <li><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_linux_x86_64.tar.gz">Linux</a></li>
+    <li><a href="https://github.com/PINT-NMR/PINT/archive/v2.0.zip">Source code</a></li>
   </ul>
 </nav>
 
