--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,15 @@
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
     <title>{{ site.title | default: site.github.repository_name }}</title>
-	
+	  <style>
+	body {
+   width:1000px;
+   margin:0 auto;
+}
+		  </style>
   </head>
 
   <body>
-   width:1000px;
-   margin:0 auto;
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
