--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,9 @@
     <title>{{ site.title | default: site.github.repository_name }}</title>
 	  <style>
 	body {
-   width:1000px;
+   width:500px;
    margin:0 auto;
 }
-.nav {text-align:left;-webkit-flex: 1 auto;flex:1 auto;-webkit-order:1;order:1;}
-.article {-webkit-flex:5 0px;flex:5 0px;-webkit-order:2;order:2;}
 		  </style>
   </head>
 
@@ -48,7 +46,8 @@
 
 <article>
   <h1>NMR spectroscopy software for line shape fitting and downstream analysis.</h1>
-  <p>PINT (Peak INTegration) is designed to perform integration of peaks in NMR spectra. The program is easy to use, yet powerful enough to handle complicated spectra. Peaks are integrated by fitting predefined line shapes to experimental data and the fitting can be customized to deal with heavily overlapped peaks. The results can be inspected graphically, which facilitates systematic optimization of the line shape fitting. The integrated peak volumes can be used to extract parameters such as relaxation rates and information about low populated states. Since the release of v2.0, PINT is based on a graphical user interface and contains all necessary tools to render and interact with spectra and automatically generate plots. Comprehensible video tutorials and a user manual are accessed from within the software. PINT is compiled for 64-bit versions of Windows, Linux and Mac OS X.</p>
+  <p>PINT (Peak INTegration) is designed to perform integration of peaks in NMR spectra. The program is easy to use, yet powerful enough to handle complicated spectra. Peaks are integrated by fitting predefined line shapes to experimental data and the fitting can be customized to deal with heavily overlapped peaks. The results can be inspected graphically, which facilitates systematic optimization of the line shape fitting. The integrated peak volumes can be used to extract parameters such as relaxation rates and information about low populated states.</p>
+  <p>Since the release of v2.0, PINT is based on a graphical user interface and contains all necessary tools to render and interact with spectra and automatically generate plots. Comprehensible video tutorials and a user manual are accessed from within the software. PINT is compiled for 64-bit versions of Windows, Linux and Mac OS X.</p>
 </article>
       </section>
     </div>
