--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,10 @@
     <title>{{ site.title | default: site.github.repository_name }}</title>
 	  <style>
 	body {
-   width:1500px;
+   width:1000px;
    margin:0 auto;
+		    .nav {text-align:left;-webkit-flex: 1 auto;flex:1 auto;-webkit-order:1;order:1;}
+    .article {-webkit-flex:5 0px;flex:5 0px;-webkit-order:2;order:2;}
 }
 		  </style>
   </head>
