--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,10 @@
 	body {
    width:1000px;
    margin:0 auto;
-		    .nav {text-align:left;-webkit-flex: 1 auto;flex:1 auto;-webkit-order:1;order:1;}
+@media all and (min-width: 768px) {
+    .nav {text-align:left;-webkit-flex: 1 auto;flex:1 auto;-webkit-order:1;order:1;}
     .article {-webkit-flex:5 0px;flex:5 0px;-webkit-order:2;order:2;}
+}
 }
 		  </style>
   </head>
