--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,12 +9,8 @@ img {
 }
 
 .left {
-    position: absolute;
-    left: 0px;
-    width: 300px;
+    float: left;
 }
 .right {
-    position: absolute;
-    right: 0px;
-    width: 1000px;
+float: right;
 }
