--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,5 @@ img {
     margin: auto;
 }
 
-#container{width:100%;}
-#left{float:left;width:100px;}
-#right{float:right;width:100px;}
+#left{float:left;width:100%;}
+#right{float:right;width:100%;}
