--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ img {
     display: block;
     margin: auto;
 }
-.inner {
+.inner2 {
   position: relative;
   max-width: 1000px;
   padding: 20px 10px;
