--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,3 +13,20 @@ img {
   padding: 20px 10px;
   margin: 0 auto;
 }
+
+#header_wrap .inner2 {
+  padding: 60px 10px 0px 0px;
+}
+
+.inner2 {
+    min-width: 320px;
+    max-width: 480px;
+  }
+
+  #header_wrap .inner2 {
+    padding: 60px 10px;
+  }
+
+  #main_content.inner2 {
+    padding: 10px;
+  }
