--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
 
     <title>{{ site.title | default: site.github.repository_name }}</title>
 }
+	  <style>
+		  
+	  </style>
 		    </head>
   <body>
     <!-- HEADER -->
@@ -29,8 +32,8 @@
       <section id="main_content" class="inner2">
 	      <div id="container">
   <div id="left">
-  <ul>
-	<h1>Download PINT</h1>
+  <h1>Download PINT</h1>
+  <ul id="horizontal-list">
     <li><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_windows_x86_64.zip">Windows</a></li>
     <li><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_mac_x86_64.dmg">Mac</a></li>
     <li><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_linux_x86_64.tar.gz">Linux</a></li>
