--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,3 +13,17 @@ img {
   padding: 20px 10px;
   margin: 0 auto;
 }
+
+.table {
+	display: table;   /* Allow the centering to work */
+	margin: 0 auto;
+}
+
+ul#horizontal-list {
+	min-width: 696px;
+	list-style: none;
+	padding-top: 20px;
+	}
+	ul#horizontal-list li {
+		display: inline;
+	}
