--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
                     <h1 id="project_title">
-            <img src="images/pint_icon.png">
+            <img src="images/watermark.png">
           </h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
         </header>
