--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
 
                     <h1 id="project_title">
             <img src="images/watermark.png">
+			    NMR spectroscopy software for line shape fitting and downstream analysis
           </h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
         </header>
     </div>
 
