--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,10 @@
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
                     <h1 id="project_title">
-            <img src="images/watermark.png">
-			    NMR spectroscopy software for line shape fitting and downstream analysis
+			    <div>
+    <p style="float: left;"><img src="images/watermark.png" height="384px" width="256px" border="0px"></p>
+				    <p>NMR spectroscopy software for line shape fitting and downstream analysis</p>
+				    </div>
           </h1>
         </header>
     </div>
