--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
                     <h1 id="project_title">
 			    <div>
-    <p style="float: left;"><img src="images/watermark.png" height="256px" width="171px" border="0px" padding-bottom="10px"></p>
+    <p style="float: left;"><img src="images/watermark.png" height="256px" width="171px" border="0px" padding-bottom="10px" padding-right="10px"></p>
 				    <p>NMR spectroscopy software for line shape fitting and downstream analysis</p>
 				    </div>
           </h1>
