--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,13 @@
 ---
 
 @import "{{ site.theme }}";
-
+p {
+    display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+}
 img {
     display: block;
     margin: 5px 20px;
