--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,16 +2,22 @@
 ---
 
 @import "{{ site.theme }}";
-p {
-    display: block;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    margin-left: 0;
-    margin-right: 0;
+#pint_head {
+    max-width: 900px;
+    font-size:28px;
+  margin-right:25px;
+  margin-bottom:5px;
 }
+
+#pint_title{
+font-size:35px;
+  max-width: 800px;
+}
+
 img {
-    display: block;
-    padding: 5px 20px;
+  display: inline-block;
+  margin: 25px 10px;
+  		
 }
 .inner2 {
   position: relative;
