--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,8 @@
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
                     <h1 id="project_title">
-			    <div>
-    <p style="float: left;"><img src="images/watermark.png" height="256px" width="171px" border="0px"></p>
-				    <p>NMR spectroscopy software for line shape fitting and downstream analysis</p>
-				    </div>
+    <p id=pint_head style="float: left;"><img src="images/watermark.png" height="256px" width="171px" border="0px"></p>
+            <p id="pint_title">NMR spectroscopy software for line shape fitting and downstream analysis</p>
           </h1>
         </header>
     </div>
