--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
 
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="icon" href="images/pinticon.png">
+    <link rel="icon" href="images/pint_icon.png">
     <title>{{ site.title | default: site.github.repository_name }}</title>
 		    </head>
   <body>
@@ -17,7 +17,7 @@
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
                     <h1 id="project_title">
-    <p id=pint_head style="float: left;"><img src="images/watermark.png" height="512px" width="400px" border="0px"></p>
+    <p id=pint_head style="float: left;"><img src="images/pinticon.png" height="512px" width="400px" border="0px"></p>
             <p id="pint_title">NMR spectroscopy software for line shape fitting and downstream analysis</p>
           </h1>
         </header>
