--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,11 @@ font-size:35px;
 img {
   display: inline-block;
   margin: 25px 10px;
+	    box-shadow: 0 0 0px #ebebeb;
+  -webkit-box-shadow: 0 0 0px #000000;
+  -moz-box-shadow: 0 0 0px #000000;
+  -o-box-shadow: 0 0 0px #000000;
+  -ms-box-shadow: 0 0 0px #000000;
   		
 }
 .inner2 {
