--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
   <h1>Download PINT</h1>
 	  <div class="table">
   <ul id="horizontal-list">
-    <li><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_windows_x86_64.zip"><input type="image" src="windows_normal.png" onMouseOver="this.src='windows_hover.png'" onMouseOut="this.src='windows_normal.png'"></a></li>
+    <li><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_windows_x86_64.zip">Windows</a></li>
     <li><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_mac_x86_64.dmg">Mac</a></li>
     <li><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_linux_x86_64.tar.gz">Linux</a></li>
     <li><a href="https://github.com/PINT-NMR/PINT/archive/v2.0.zip">Source code</a></li>
