--- a/css/main.css
+++ b/css/main.css
@@ -174,3 +174,21 @@ footer p {
 #footer_wrap {
   background: #000000;
 }
+
+#forkme_banner {
+  display: block;
+  position: absolute;
+  top:0;
+  right: 10px;
+  z-index: 10;
+  padding: 10px 20px 10px 50px;
+  color: #fff;
+  background: url('https://github.com/jasoncostello/slate/tree/gh-pages/images/blacktocat.svg') #0090ff no-repeat 8% 50%;
+  background-size: 25px;
+  font-weight: 700;
+  border: none;
+}
+
+#forkme_banner:hover {
+  background-color: #1883ed;
+}
