--- a/css/main.css
+++ b/css/main.css
@@ -183,7 +183,7 @@ footer p {
   z-index: 10;
   padding: 10px 20px 10px 50px;
   color: #fff;
-  background: url('https://github.com/jasoncostello/slate/tree/gh-pages/images/blacktocat.svg') #0090ff no-repeat 8% 50%;
+  background: url('../images/blacktocat.svg') #0090ff no-repeat 8% 50%;
   background-size: 25px;
   font-weight: 700;
   border: none;
