--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
                     <h1 id="project_title">
-    <p id=pint_head style="float: left;"><img src="images/pinticon.png" border="0px" width="328px" height="256px"></p>
+    <p id=pint_head style="float: left;"><img src="images/pinticon.png" border="0px" ></p>
             <p id="pint_title_header">NMR spectroscopy software for line shape fitting and downstream analysis</p>
           </h1>
         </header>
