--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,12 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
+          <div>
     <p id=pint_head><img src="images/pinticon.png" border="0px" width="512px" height="400px"></p>
+          </div>
+          <div>
             <p id="pint_title_header">NMR spectroscopy software for line shape fitting and downstream analysis</p>
+          </div>
         </header>
     </div>
 <section id="main_content" class="inner2">
