--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
   <div class="main-container">
   <div class="fixer-container">
 <div class="container">
-  <p class="title"><img src="images/windows_normal.png"></p>
+  <p class="title"><img src="images/windows_normal.png" height: 20px; width:40px;></p>
   <div class="overlay"></div>
   <div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_windows_x86_64.zip"> Download </a></div>
 </div>
