--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,7 @@
   width: 250px;
   left: 0;
   top: 15px;
+  bottom: 0px;
   font-weight: 700;
   font-size: 30px;
   text-align: center;
@@ -127,14 +128,14 @@
 }
 
 .container:hover .title {
-  top: 5px;
+  top: 2px;
 }
 
 .button {
   position: relative;
   width: 250px;
   left:0;
-  top: 15px;
+  top: 5px;
   text-align: center;
   opacity: 0;
   transition: opacity .35s ease;
